[gd_scene load_steps=9 format=3 uid="uid://bmabboly2rydg"]

[ext_resource type="Texture2D" uid="uid://chjdix5jqup4w" path="res://Assets/Visual Assets/MenuAssets/Backstab.png" id="1_oc0nr"]
[ext_resource type="Script" uid="uid://etp76epcnnfs" path="res://ScenesAndScripts/Settings.gd" id="1_wk2kn"]
[ext_resource type="Texture2D" uid="uid://bpflm36dqcuyf" path="res://Assets/Visual Assets/MenuAssets/Buttons/Back.png" id="3_jo8w5"]
[ext_resource type="Texture2D" uid="uid://op7nbjaabd0y" path="res://Assets/Visual Assets/MenuAssets/Buttons/Controls.png" id="3_mixty"]
[ext_resource type="AudioStream" uid="uid://dq2pqvvbiff6w" path="res://Assets/Audio Assets/vine-boom.mp3" id="4_81wmy"]
[ext_resource type="Texture2D" uid="uid://cqeaw7eptnjwe" path="res://Assets/Visual Assets/MenuAssets/Buttons/Visuals.png" id="4_3566m"]
[ext_resource type="Texture2D" uid="uid://djv31rbaon2lt" path="res://Assets/Visual Assets/MenuAssets/Buttons/Audio.png" id="5_7t85u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmtpu"]
bg_color = Color(0, 0, 0, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wk2kn")

[node name="BlackPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cmtpu")

[node name="Title" type="Button" parent="."]
layout_mode = 0
offset_left = 312.0
offset_top = 142.0
offset_right = 840.0
offset_bottom = 222.0
icon = ExtResource("1_oc0nr")
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 283.0
offset_right = 708.0
offset_bottom = 507.0

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_mixty")
flat = true

[node name="Visuals" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_3566m")
flat = true

[node name="Audio" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_7t85u")
flat = true

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_jo8w5")
flat = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1121.0
offset_top = -48.0
offset_right = -961.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
text = "Backstab Version 0.1"

[node name="VineBoom" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_81wmy")

[connection signal="pressed" from="Title" to="." method="_on_title_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Visuals" to="." method="_on_visuals_pressed"]
[connection signal="pressed" from="VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
